# llm-zoomcamp-2026-code

./: .gitignore  README.md  notebook.ipynb  persistent_rag.ipynb  persistent_rag_ingest.ipynb  pyproject.toml  vector_perisitant.ipynb
llm-zoomcamp-agentic-rag-homework/: Prc.ipynb  README.md  homework_rag.ipynb  ingest.py
module_1_rag/: function-calling.ipynb  ingest.py  notebook.ipynb  persistent_rag.ipynb  persistent_rag_ingest.ipynb
module_2_homework/: homework.ipynb
