[project]
name = "llm-zoomcamp-2026-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "onnxruntime>=1.27.0",
    "openai>=2.41.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
    "sqlitesearch>=0.0.5",
    "tokenizers>=0.22.2",
    "toyaikit>=0.0.11",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.20.1",
]

